# hash256-multi-gpu

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  run.sh
src/: gpu.rs  keccak_kernel.cl  main.rs
